--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -10,13 +10,9 @@ Style/StringLiterals:
   EnforcedStyle: single_quotes
 Style/Documentation:
   Enabled: false
-GitHub/RailsControllerRenderActionSymbol:
-  Enabled: false
-GitHub/RailsControllerRenderPathsExist:
-  Enabled: false
-Style/FrozenStringLiteralComment:
-  Enabled: false
 Naming/VariableNumber:
+  Enabled: false
+Naming/FileName:
   Enabled: false
 
 Metrics/BlockLength:
