--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -14,6 +14,8 @@ Naming/VariableNumber:
   Enabled: false
 Naming/FileName:
   Enabled: false
+Gemspec/RequiredRubyVersion:
+  Enabled: false
 
 Metrics/BlockLength:
   Exclude:
