Fix rubocop on github actions

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -5,6 +5,7 @@ AllCops:
   Exclude:
     - 'bin/**/*'
     - '.git/**/*'
+    - 'vendor/**/*'
 
 Style/StringLiterals:
   EnforcedStyle: single_quotes
